--- a/R/3_case_study_KDE.Rmd
+++ b/R/3_case_study_KDE.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Case Study: Kernel Density Hotspots"
 author: "Michael Branion-Calles"
-date: "March 3, 2020"
+date: "March 23, 2020"
 output: 
   html_document:
     code_folding: hide 
@@ -16,7 +16,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-#Background
+# Background
 
 Hotspot in traffic safety context is a location where there are more unsafe incidents occurring than is normal. 
 
@@ -56,21 +56,13 @@ library(mapview)
 file.sources = list.files(path = paste0(getwd(),"/R/functions/"),pattern="*.R$",full.names = TRUE)
 sapply(file.sources,source,.GlobalEnv)
 
-study_area <- read_sf(paste0(getwd(),"/input/processed/census_ct_ec_201601_201709_total.gpkg"))
+study_area <- read_sf(paste0(getwd(),"/input/processed/study_area.gpkg"))
 
 network <- read_sf(paste0(getwd(),"/input/processed/edge_ec_201601_201709_total.gpkg"))
-network_simplified <- network %>% st_union()
 
-
-bikemaps <- read_sf(paste0(getwd(),"/input/processed/inc_bm_201601_201709_snp_30m.gpkg")) %>% 
+incidents <- read_sf(paste0(getwd(),"/input/processed/inc_bm_201601_201709_snp_30m.gpkg")) %>% 
   filter(st_intersects(x = ., y = st_as_sfc(st_bbox(study_area)), sparse = FALSE))
 
-incidents <- bikemaps
-
-# icbc <- read_sf(paste0(getwd(),"/input/processed/inc_icbc_201601_201709_snp_30m.gpkg"))
-
-# incidents <- rbind(bikemaps %>% select(p_type),icbc %>% mutate(p_type = "icbc") %>% select(p_type))%>% 
-#   filter(st_intersects(x = ., y = st_as_sfc(st_bbox(study_area)), sparse = FALSE))
 
 ggplot() +
   geom_sf(data = network,color="lightgrey",alpha=0.05)+
@@ -129,7 +121,7 @@ inc_sp <- as(incidents,"Spatial")
 inc_ppp <- as(inc_sp,"ppp") #create ppp object from bikemaps points
 Window(inc_ppp) <- as(study_area_sp,"owin") #define study extent in ppp object
 
-bandwidth <- c(50,100,250,500)
+bandwidth <- c(50,100,150,250)
 
 inc_planar <- lapply(1:length(bandwidth),function(x){
   density(inc_ppp, 
@@ -138,42 +130,10 @@ inc_planar <- lapply(1:length(bandwidth),function(x){
           eps = 10,
           positive=TRUE)
   }) #kernel density images
+
 inc_planar_r <- lapply(inc_planar,function(x) raster(x,crs = CRS('+init=EPSG:26910'))) #convert to raster file
 names(inc_planar_r) <-  bandwidth#convert to raster file
-
-#inc_planar_df <- lapply(inc_planar_r, function(x) as.data.frame(x, xy = TRUE))#convert to data.frame
-prank <- function(x) ifelse(is.na(x), NA, rank(x,ties.method = "min") / sum(!is.na(x))) 
-
-detect_kde_hs <- function(kde,percentiles){
-  
-  
-  kde@data@values <- prank(kde@data@values)#convert density values to rank
-  n_intervals <- sapply(percentiles,function(x) 1/(1-x)) # calculate number of intervals needed to isolate top x%
-  hotspots <-  lapply(1:length(percentiles), function(i) raster::cut(kde,breaks = n_intervals[i]+1)) #cut raster
-  
-  for(i in 1:length(hotspots)){
-    
-    hotspots[[i]]@data@values <- ifelse(hotspots[[i]]@data@values<max(hotspots[[i]]@data@values,na.rm=TRUE),
-                                        NA,
-                                        hotspots[[i]]@data@values) #isolate the top x% of cells
-    
-  }
-  
-  hotspots <-  lapply(1:length(hotspots), function(i) rasterToPolygons(hotspots[[i]],dissolve = TRUE) %>% st_as_sf()) #convert to polygons
- 
-   for(i in 1:length(hotspots)){
-    
-    hotspots[[i]]$layer <- as.character(percentiles[i]) #change value to original input
-    
-   }
-  
-  hotspots <- do.call(rbind,hotspots)
-  hotspots$layer <- factor(hotspots$layer, levels = as.character(percentiles))
- return(hotspots) #combine polygons
-  
-}
-
-incident_hotspots <- lapply(inc_planar_r, function(x) detect_kde_hs(x,percentiles = c(0.90,0.95,0.99,0.999)))
+incident_hotspots <- lapply(inc_planar_r, function(x) detect_planar_hotspot(x,percentiles = c(0.90,0.95,0.99,0.999)))
 
 #interactive plot
 mapview(incident_hotspots,alpha.regions=0.25)
@@ -211,7 +171,9 @@ ggplot()+
 ### Quantifying differences
 
 ```{r}
-hs <- lapply(1:nrow(incident_hotspots_cmbnd),function(x) st_sf(st_cast(st_union(incident_hotspots_cmbnd[x,]), "POLYGON")) %>% mutate(area= st_area(.))) 
+hs <- lapply(1:nrow(incident_hotspots_cmbnd),
+             function(x) st_sf(st_cast(st_union(incident_hotspots_cmbnd[x,]), "POLYGON")) %>% 
+               mutate(area= st_area(.))) 
 
 qe <- tibble(threshold = incident_hotspots_cmbnd$layer,
        bandwidth = incident_hotspots_cmbnd$bw,
@@ -270,30 +232,9 @@ $$\lambda(z)= \sum_{i=1}^{n} \frac{1}{\tau}(\frac{3}{\pi}(1-\frac{d_{iz}^2}{\tau
 
 ```{r}
 
-inc_network_kde <- read_sf(paste0(getwd(),"/output/bikemaps_kde_10m_lixel_50m_500m_bw.gpkg"))
+inc_network_kde <- read_sf(paste0(getwd(),"/output/bikemaps_kde_10m_lixel_50m_250m_bw.gpkg"))
 
-detect_network_hotspot <- function(network_kde,density_col,percentiles){
-  
-  if(typeof(density_col)=="character"){
-    
-    enquo_density_col <- as.name(density_col)
-    
-  }else{
-      
-    enquo_density_col <- enquo(density_col)
-
-  }
-  
-  hotspots <- lapply(1:length(percentiles),function(x) network_kde %>% filter(prank(!!enquo_density_col)>=percentiles[x]) %>% st_union %>% st_as_sf())
-  names(hotspots) <- percentiles
-  hotspots <- hotspots %>% purrr::map(~mutate(.,density_col = quo_name(enquo_density_col)))
-  hotspots <- do.call(what = sf:::rbind.sf, args = hotspots) %>% 
-    mutate(thresholds = row.names(.))
-  return(hotspots)
-  
-}
-
-cols_vec <- c("kde_bw_50","kde_bw_100","kde_bw_250","kde_bw_500")
+cols_vec <- c("kde_bw_50","kde_bw_100","kde_bw_150","kde_bw_250")
 
 inc_network_hotspots <- lapply(cols_vec, function(x) detect_network_hotspot(inc_network_kde,x,percentiles = c(0.90,0.95,0.99,0.999)))
 names(inc_network_hotspots) <- bandwidth
@@ -428,7 +369,7 @@ for(i in 1:length(exp_planar_r)) {
 risk_planar <- mapply(`/`,inc_planar_r,exp_planar_r)
 
 #find risk hotspots
-risk_hotspots <- lapply(risk_planar, function(x) detect_kde_hs(x,percentiles = c(0.90,0.95,0.99,0.999)))
+risk_hotspots <- lapply(risk_planar, function(x) detect_planar_hotspot(x,percentiles = c(0.90,0.95,0.99,0.999)))
 
 
 #interactive plot
@@ -514,92 +455,9 @@ Options for further comparisons:
 1. Use LISA (Moran's I or Getis-Ord) to identify density hotspots amongst lixels with monte carlo simulation for significance (see [Xie and Yan](https://www.sciencedirect.com/science/article/pii/S0966692313000860)
   - This would be a way of identifying high-high clusters for kernel density based on psuedo significance
   - I have gotten this to work but need time to improve computation times to make it feasible. Confident I can do it but a matter of balancing the time and value added? 
-  
-2. Better quantify the differences between identified hotspots through stampr [Long, Robertson & Nelson :), 2018](https://www.jstatsoft.org/article/view/v084c01)?
 
 
 
 
 
-
-
-
-<!-- ### LISA -->
-
-<!-- ```{r} -->
-<!-- library(spdep) -->
-<!-- localmoran_mc <- function(x,sw,nsim,sig_threshold){ -->
-
-<!--   n <- length(x)#number of polylines -->
-<!--   mew <- mean(x) #mean of attribute over all polylines -->
-<!--   y <- x-mew #centralized -->
-<!--   p_var <- sum((x-mew)^2)*(1/n)#population variance -->
-<!--   psd <- sqrt(p_var)#population standard deviation -->
-<!--   z <- y/psd #standardized values vector (how far does value fall from the mean) -->
-<!--   lag_z <- lag.listw(sw,z,zero.policy = TRUE) #Lagged Local Moran's I values for neighbours -->
-<!--   Ii <- z*lag_z -->
-
-<!--   sim <- matrix(0, ncol = nsim, nrow = n) -->
-<!--   for (i in 1:nsim) {  -->
-<!--     x_s <- sample(x) #Permute values of x -->
-<!--     y_s <- x_s-mew #centralized -->
-<!--     z_s <- y_s/psd #standardized values vector (how far does value fall from the mean) -->
-<!--     lag_z_s <- lag.listw(sw,z_s,zero.policy = TRUE) -->
-<!--     sim[, i] <- z*lag_z_s -->
-<!--   } -->
-<!--   xrank <- apply(cbind(Ii, sim), 1, function(x) rank(x)[1])  -->
-<!--   diff <- nsim - xrank  -->
-<!--   diff <- ifelse(diff > 0, diff, 0)  -->
-<!--   pval <- punif((diff + 1)/(nsim + 1)) -->
-
-<!--   type = factor(case_when(pval <=sig_threshold & z>0 & lag_z>0 ~ "High-High", -->
-<!--                           pval <=sig_threshold & z>0 & lag_z<0 ~ "High-Low", -->
-<!--                           pval <=sig_threshold & z<0 & lag_z>0 ~ "Low-High", -->
-<!--                           pval <=sig_threshold & z<0 & lag_z<0 ~ "Low-Low", -->
-<!--                           TRUE ~ "Insig."), -->
-<!--                 levels = c("High-High","Low-Low","Low-High","High-Low","Insig."))#significant clusters -->
-
-<!--   return(data.frame(Ii = Ii,z=z,lag_z = lag_z,pval=pval,cluster_type = type)) -->
-
-<!-- } -->
-
-<!-- nb_adj_lag1 <- sfl_to_nb_spadj(inc_network_kde,spatial_lag = 10) -->
-<!-- sw_lag1 <- nb2listw(nb_adj_lag1,style = "C",zero.policy = TRUE) -->
-
-<!-- system.time({ -->
-<!-- inc_mi <- localmoran_mc(inc_network_kde$kde_bw_50,sw=sw_lag1,nsim=999,sig_threshold =0.01 ) -->
-<!-- }) -->
-
-<!-- inc_mi %>%  -->
-<!--  ggplot(aes(x=z,y=lag_z,colour=cluster_type)) + geom_point(alpha = 0.25) +  -->
-<!--   geom_hline(yintercept = 0) + -->
-<!--   geom_vline(xintercept = 0) +  -->
-<!--   stat_smooth(method = "lm",color="red",size=1.15,alpha = 0.5,linetype = "dashed",se = FALSE) + -->
-<!--   theme_minimal() -->
-
-
-<!-- hotspots <- bind_cols(inc_network_kde,inc_mi) %>%  -->
-<!--   filter(cluster_type!="Insig.")  -->
-
-<!-- ggplot() + -->
-<!--   geom_sf(data=st_union(study_area),fill="snow1") + -->
-<!--   geom_sf(data = hotspots,aes(color=cluster_type,size=cluster_type),show.legend = "line") + -->
-<!--   scale_color_manual(name = c("Moran's I\nCluster"), -->
-<!--                      values = c("#D7191C","#2B83BA","#ABDDA4","#FDAE61","lightgrey"), -->
-<!--                      drop=FALSE) + -->
-<!--   scale_size_manual(name = c("Moran's I\nCluster"), -->
-<!--                     values = c(1,1,1,1,0.05), -->
-<!--                     drop=FALSE) + -->
-<!--   theme_minimal() + -->
-<!--   theme(axis.text.x = element_blank(), -->
-<!--         axis.ticks.x = element_blank(), -->
-<!--         axis.text.y = element_blank(), -->
-<!--         axis.ticks.y = element_blank(), -->
-<!--         panel.grid.minor = element_blank() , -->
-<!--         panel.grid.major = element_blank() , -->
-<!--         axis.title = element_blank(), -->
-<!--         legend.position = "left") -->
-
-
-<!-- ``` -->
 
