--- a/R/4_case_study_LISA.Rmd
+++ b/R/4_case_study_LISA.Rmd
@@ -59,16 +59,15 @@ sapply(file.sources,source,.GlobalEnv)
 
 
 ### Load data
-network <-read_sf(paste0(getwd(),"/input/processed/edge_ec_201601_201709_total.gpkg"))
-incidents <- read_sf(paste0(getwd(),"/input/processed/inc_bm_201601_201709_snp_30m.gpkg"))
+network <-read_sf(paste0(getwd(),"/input/processed/edge_ec_total_crash_strava.gpkg"))
+incidents <- read_sf(paste0(getwd(),"/input/processed/inc_bm_snp_30m.gpkg"))
 study_area <- read_sf(paste0(getwd(),"/input/processed/study_area.gpkg"))
-
+vic_city <- read_sf(paste0(getwd(),"/input/processed/city_of_victoria.gpkg"))
 ### Clean Network Data
 network  <- SpatialLinesNetwork(network)
 network <- sln_clean_graph(network)@sl# Remove unconnected roads
 
-network$total_bm_incidents <- network$total_bm_crashes + network$total_nearmiss
-network$total_bm_incident_rate <- network$total_bm_incidents / network$CAADB * 1000
+network$incident_rate <- network$all_incidents / network$CAADB * 1000
 ```
 
 ## Incidents
@@ -90,14 +89,14 @@ ggplot() +
   ggtitle("Bicycling Incidents in the Victoria Region: \nJanuary 2016 - September 2017")
 
 ggplot() +
-  geom_sf(data =network,aes(color=total_all_incidents,
-                                       size=total_all_incidents),show.legend = "line") +
+  geom_sf(data =network,aes(color=all_incidents,
+                                       size=all_incidents),show.legend = "line") +
   scale_color_gradient(name = c("N Crashes"),
-                        breaks = c(0,1,2,3,4),
+                        breaks = c(0,1,2,3,4,5,6,7),
                        low = "lightgrey", high = "red") +
   scale_size_continuous(name = c("N Crashes"),
                         range = c(0.01,2),
-                        breaks = c(0,1,2,3,4)) +
+                        breaks = c(0,1,2,3,4,5,6,7)) +
         guides(color= guide_legend(), size=guide_legend()) +
   theme_minimal() +
   theme(axis.text.x = element_blank(),
@@ -108,7 +107,10 @@ ggplot() +
         panel.grid.major = element_blank() ,
         axis.title = element_blank(),
         legend.position = "left")  +
-  ggtitle("BikeMaps.org Incidents Aggregated to Polylines: \nJanuary 2016 - September 2017")
+  ggtitle("BikeMaps.org Incidents Aggregated to Polylines") +
+    coord_sf(xlim = c(470834.0,476155.9),ylim = c(5361141.0,5366429.4))
+
+  
 ```
 
 
@@ -203,7 +205,7 @@ sw_lag3 <- nb2listw(nb_adj_lag3,style = "C",zero.policy = TRUE)
 thresholds <- c(0.1,0.05,0.01,0.001)
 
 lmi_lag1 <-  lapply(1:length(thresholds), function(x) bind_cols(network,
-                         localmoran_mc(network$total_bm_incidents,sw_lag1,nsim = 999,sig_threshold = thresholds[x])) %>% 
+                         localmoran_mc(network$all_incidents,sw_lag1,nsim = 999,sig_threshold = thresholds[x])) %>% 
                  mutate(Significance = as.character(thresholds[x]), 
                         Adjacency_lag = "Lag 1"))
  
@@ -211,7 +213,7 @@ lmi_lag1_bind <- do.call(rbind,lmi_lag1) %>%
   mutate(Significance = factor(Significance, levels = c("0.1","0.05","0.01","0.001")))
 
 lmi_lag2 <-  lapply(1:length(thresholds), function(x) bind_cols(network,
-                         localmoran_mc(network$total_bm_incidents,sw_lag2,nsim = 999,sig_threshold = thresholds[x])) %>% 
+                         localmoran_mc(network$all_incidents,sw_lag2,nsim = 999,sig_threshold = thresholds[x])) %>% 
                  mutate(Significance = as.character(thresholds[x]), 
                         Adjacency_lag = "Lag 2"))
  
@@ -219,7 +221,7 @@ lmi_lag2_bind <- do.call(rbind,lmi_lag2) %>%
   mutate(Significance = factor(Significance, levels = c("0.1","0.05","0.01","0.001")))
 
 lmi_lag3 <-  lapply(1:length(thresholds), function(x) bind_cols(network,
-                         localmoran_mc(network$total_bm_incidents,sw_lag3,nsim = 999,sig_threshold = thresholds[x])) %>% 
+                         localmoran_mc(network$all_incidents,sw_lag3,nsim = 999,sig_threshold = thresholds[x])) %>% 
                  mutate(Significance = as.character(thresholds[x]), 
                         Adjacency_lag = "Lag 3"))
  
@@ -270,118 +272,20 @@ lmi_lag3[[1]] %>%
 ### Significant Clusters
 ```{r,warning=FALSE,message=FALSE}
 
-hotspots <- lmi_bind %>% 
-  filter(cluster_type!="Insig.") 
-
-ggplot() +
-  geom_sf(data=st_union(study_area),fill="snow1") +
-  geom_sf(data = hotspots,aes(color=cluster_type,size=cluster_type),show.legend = "line") +
-  scale_color_manual(name = c("Moran's I\nCluster"),
-                     values = c("#D7191C","#2B83BA","#ABDDA4","#FDAE61","lightgrey"),
-                     drop=FALSE) +
-  scale_size_manual(name = c("Moran's I\nCluster"),
-                    values = c(1,1,1,1,0.05),
-                    drop=FALSE) +
-  theme_minimal() +
-  theme(axis.text.x = element_blank(),
-        axis.ticks.x = element_blank(),
-        axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        panel.grid.minor = element_blank() ,
-        panel.grid.major = element_blank() ,
-        axis.title = element_blank(),
-        legend.position = "left") +
-  facet_grid(Adjacency_lag~Significance)
-
 
 mapview(lmi_list,zcol = list("Significance","Significance","Significance","Significance"))
 
-```
 
-## Crash Rates
+hotspots <- lmi_bind %>% 
+  filter(pval<0.01) %>% 
+  filter(z>0) %>% 
+  filter(st_intersects(x=.,y=st_as_sfc(st_bbox(vic_city)),sparse=FALSE))   # subset bikemaps by captial region boundary
 
-```{r,warning=FALSE,message=FALSE}
-
-# Local Moran's I, crashes only
-
-thresholds <- c(0.1,0.05,0.01,0.001)
-
-rate_lmi_lag1 <-  lapply(1:length(thresholds), function(x) bind_cols(network,
-                         localmoran_mc(network$total_bm_incident_rate,sw_lag1,nsim = 999,sig_threshold = thresholds[x])) %>% 
-                 mutate(Significance = as.character(thresholds[x]), 
-                        Adjacency_lag = "Lag 1"))
- 
-rate_lmi_lag1_bind <- do.call(rbind,rate_lmi_lag1) %>% 
-  mutate(Significance = factor(Significance, levels = c("0.1","0.05","0.01","0.001")))
-
-rate_lmi_lag2 <-  lapply(1:length(thresholds), function(x) bind_cols(network,
-                         localmoran_mc(network$total_bm_incident_rate,sw_lag2,nsim = 999,sig_threshold = thresholds[x])) %>% 
-                 mutate(Significance = as.character(thresholds[x]), 
-                        Adjacency_lag = "Lag 2"))
- 
-rate_lmi_lag2_bind <- do.call(rbind,rate_lmi_lag2) %>% 
-  mutate(Significance = factor(Significance, levels = c("0.1","0.05","0.01","0.001")))
-
-rate_lmi_lag3 <-  lapply(1:length(thresholds), function(x) bind_cols(network,
-                         localmoran_mc(network$total_bm_incident_rate,sw_lag3,nsim = 999,sig_threshold = thresholds[x])) %>% 
-                 mutate(Significance = as.character(thresholds[x]), 
-                        Adjacency_lag = "Lag 3"))
- 
-rate_lmi_lag3_bind <- do.call(rbind,rate_lmi_lag3) %>% 
-  mutate(Significance = factor(Significance, levels = c("0.1","0.05","0.01","0.001")))
-
-rate_lmi_bind <- rbind(rate_lmi_lag1_bind,rate_lmi_lag2_bind,rate_lmi_lag3_bind)
-
-rate_lmi_list <- list(rate_lmi_lag1_bind,rate_lmi_lag2_bind,rate_lmi_lag3_bind) %>% 
-  purrr::map(~filter(.,cluster_type!="Insig."))
-names(rate_lmi_list) <- c("Adjacency 1","Adjacency 2","Adjacency 3")
-```
-
-
-### Moran's I Scatterplot
-
-```{r,warning=FALSE,message=FALSE}
-rate_lmi_lag1[[1]] %>% 
-  ggplot(aes(x=z)) + geom_point(aes(y=lag_z),alpha = 0.25) + 
-  geom_hline(yintercept = 0) +
-  geom_vline(xintercept = 0) + 
-  stat_smooth(aes(y=lag_z),method = "lm",color="red",size=1.15,alpha = 0.5,linetype = "dashed",se = FALSE) +
-  theme_minimal() +
-  ggtitle("Lag 1")
-
-rate_lmi_lag2[[1]] %>% 
-  ggplot(aes(x=z)) + geom_point(aes(y=lag_z),alpha = 0.25) + 
-  geom_hline(yintercept = 0) +
-  geom_vline(xintercept = 0) + 
-  stat_smooth(aes(y=lag_z),method = "lm",color="red",size=1.15,alpha = 0.5,linetype = "dashed",se = FALSE) +
-  theme_minimal() +
-  ggtitle("Lag 2")
-
-rate_lmi_lag3[[1]] %>% 
-  ggplot(aes(x=z)) + geom_point(aes(y=lag_z),alpha = 0.25) + 
-  geom_hline(yintercept = 0) +
-  geom_vline(xintercept = 0) + 
-  stat_smooth(aes(y=lag_z),method = "lm",color="red",size=1.15,alpha = 0.5,linetype = "dashed",se = FALSE) +
-  theme_minimal() +
-  ggtitle("Lag 3")
-```
-
-### Significant Clusters
-
-```{r,warning=FALSE,message=FALSE}
-
-rate_hotspots <- rate_lmi_bind %>% 
-  filter(cluster_type!="Insig.") 
-
-ggplot() +
-  geom_sf(data=st_union(study_area),fill="snow1") +
-  geom_sf(data = rate_hotspots,aes(color=cluster_type,size=cluster_type),show.legend = "line") +
-  scale_color_manual(name = c("Moran's I\nCluster"),
-                     values = c("#D7191C","#2B83BA","#ABDDA4","#FDAE61","lightgrey"),
-                     drop=FALSE) +
-  scale_size_manual(name = c("Moran's I\nCluster"),
-                    values = c(1,1,1,1,0.05),
-                    drop=FALSE) +
+         
+         
+lisa_counts <- ggplot() +
+  geom_sf(data=vic_city,fill="snow1") +
+  geom_sf(data = hotspots,color="darkred") +
   theme_minimal() +
   theme(axis.text.x = element_blank(),
         axis.ticks.x = element_blank(),
@@ -391,11 +295,117 @@ ggplot() +
         panel.grid.major = element_blank() ,
         axis.title = element_blank(),
         legend.position = "left") +
-  facet_grid(Adjacency_lag~Significance)
+  facet_wrap(~Adjacency_lag,ncol=2)
 
+ggsave(lisa_counts,
+       width = 180,
+       height = 180,
+       units = "mm",
+       dpi=500,
+       device = "jpeg",
+       path = paste0(getwd(),"/figures"),
+       filename = "lisa_counts.jpeg" )
 
-mapview(rate_lmi_list,zcol = list("Significance","Significance","Significance","Significance"))
 ```
+
+<!-- ## Crash Rates -->
+
+<!-- ```{r,warning=FALSE,message=FALSE} -->
+
+<!-- # Local Moran's I, crashes only -->
+
+<!-- thresholds <- c(0.1,0.05,0.01,0.001) -->
+
+<!-- rate_lmi_lag1 <-  lapply(1:length(thresholds), function(x) bind_cols(network, -->
+<!--                          localmoran_mc(network$total_bm_incident_rate,sw_lag1,nsim = 999,sig_threshold = thresholds[x])) %>%  -->
+<!--                  mutate(Significance = as.character(thresholds[x]),  -->
+<!--                         Adjacency_lag = "Lag 1")) -->
+
+<!-- rate_lmi_lag1_bind <- do.call(rbind,rate_lmi_lag1) %>%  -->
+<!--   mutate(Significance = factor(Significance, levels = c("0.1","0.05","0.01","0.001"))) -->
+
+<!-- rate_lmi_lag2 <-  lapply(1:length(thresholds), function(x) bind_cols(network, -->
+<!--                          localmoran_mc(network$total_bm_incident_rate,sw_lag2,nsim = 999,sig_threshold = thresholds[x])) %>%  -->
+<!--                  mutate(Significance = as.character(thresholds[x]),  -->
+<!--                         Adjacency_lag = "Lag 2")) -->
+
+<!-- rate_lmi_lag2_bind <- do.call(rbind,rate_lmi_lag2) %>%  -->
+<!--   mutate(Significance = factor(Significance, levels = c("0.1","0.05","0.01","0.001"))) -->
+
+<!-- rate_lmi_lag3 <-  lapply(1:length(thresholds), function(x) bind_cols(network, -->
+<!--                          localmoran_mc(network$total_bm_incident_rate,sw_lag3,nsim = 999,sig_threshold = thresholds[x])) %>%  -->
+<!--                  mutate(Significance = as.character(thresholds[x]),  -->
+<!--                         Adjacency_lag = "Lag 3")) -->
+
+<!-- rate_lmi_lag3_bind <- do.call(rbind,rate_lmi_lag3) %>%  -->
+<!--   mutate(Significance = factor(Significance, levels = c("0.1","0.05","0.01","0.001"))) -->
+
+<!-- rate_lmi_bind <- rbind(rate_lmi_lag1_bind,rate_lmi_lag2_bind,rate_lmi_lag3_bind) -->
+
+<!-- rate_lmi_list <- list(rate_lmi_lag1_bind,rate_lmi_lag2_bind,rate_lmi_lag3_bind) %>%  -->
+<!--   purrr::map(~filter(.,cluster_type!="Insig.")) -->
+<!-- names(rate_lmi_list) <- c("Adjacency 1","Adjacency 2","Adjacency 3") -->
+<!-- ``` -->
+
+
+<!-- ### Moran's I Scatterplot -->
+
+<!-- ```{r,warning=FALSE,message=FALSE} -->
+<!-- rate_lmi_lag1[[1]] %>%  -->
+<!--   ggplot(aes(x=z)) + geom_point(aes(y=lag_z),alpha = 0.25) +  -->
+<!--   geom_hline(yintercept = 0) + -->
+<!--   geom_vline(xintercept = 0) +  -->
+<!--   stat_smooth(aes(y=lag_z),method = "lm",color="red",size=1.15,alpha = 0.5,linetype = "dashed",se = FALSE) + -->
+<!--   theme_minimal() + -->
+<!--   ggtitle("Lag 1") -->
+
+<!-- rate_lmi_lag2[[1]] %>%  -->
+<!--   ggplot(aes(x=z)) + geom_point(aes(y=lag_z),alpha = 0.25) +  -->
+<!--   geom_hline(yintercept = 0) + -->
+<!--   geom_vline(xintercept = 0) +  -->
+<!--   stat_smooth(aes(y=lag_z),method = "lm",color="red",size=1.15,alpha = 0.5,linetype = "dashed",se = FALSE) + -->
+<!--   theme_minimal() + -->
+<!--   ggtitle("Lag 2") -->
+
+<!-- rate_lmi_lag3[[1]] %>%  -->
+<!--   ggplot(aes(x=z)) + geom_point(aes(y=lag_z),alpha = 0.25) +  -->
+<!--   geom_hline(yintercept = 0) + -->
+<!--   geom_vline(xintercept = 0) +  -->
+<!--   stat_smooth(aes(y=lag_z),method = "lm",color="red",size=1.15,alpha = 0.5,linetype = "dashed",se = FALSE) + -->
+<!--   theme_minimal() + -->
+<!--   ggtitle("Lag 3") -->
+<!-- ``` -->
+
+<!-- ### Significant Clusters -->
+
+<!-- ```{r,warning=FALSE,message=FALSE} -->
+
+<!-- rate_hotspots <- rate_lmi_bind %>%  -->
+<!--   filter(cluster_type!="Insig.")  -->
+
+<!-- ggplot() + -->
+<!--   geom_sf(data=st_union(study_area),fill="snow1") + -->
+<!--   geom_sf(data = rate_hotspots,aes(color=cluster_type,size=cluster_type),show.legend = "line") + -->
+<!--   scale_color_manual(name = c("Moran's I\nCluster"), -->
+<!--                      values = c("#D7191C","#2B83BA","#ABDDA4","#FDAE61","lightgrey"), -->
+<!--                      drop=FALSE) + -->
+<!--   scale_size_manual(name = c("Moran's I\nCluster"), -->
+<!--                     values = c(1,1,1,1,0.05), -->
+<!--                     drop=FALSE) + -->
+<!--   theme_minimal() + -->
+<!--   theme(axis.text.x = element_blank(), -->
+<!--         axis.ticks.x = element_blank(), -->
+<!--         axis.text.y = element_blank(), -->
+<!--         axis.ticks.y = element_blank(), -->
+<!--         panel.grid.minor = element_blank() , -->
+<!--         panel.grid.major = element_blank() , -->
+<!--         axis.title = element_blank(), -->
+<!--         legend.position = "left") + -->
+<!--   facet_grid(Adjacency_lag~Significance) -->
+
+
+<!-- mapview(rate_lmi_list,zcol = list("Significance","Significance","Significance","Significance")) -->
+<!-- ``` -->
 
 
 # Local Moran's I, constant risk hypothesis
@@ -417,7 +427,7 @@ In this manner, $I_{i,cr}$ assesses deviations in crash counts from expected cou
 ```{r,warning=FALSE,message=FALSE}
 
 cr_lag1 <-  lapply(1:length(thresholds), function(x) bind_cols(network,
-                                                               localmoran_cr_mc(event = network$total_bm_incidents,
+                                                               localmoran_cr_mc(event = network$all_incidents,
                                                                                 exposure = network$CAADB,
                                                                                 sw = sw_lag1,
                                                                                 nsim = 999,
@@ -431,7 +441,7 @@ cr_lag1_bind <- do.call(rbind,cr_lag1) %>%
 
 cr_lag2 <-  lapply(1:length(thresholds), 
                    function(x) bind_cols(network,
-                                         localmoran_cr_mc(event = network$total_bm_incidents,
+                                         localmoran_cr_mc(event = network$all_incidents,
                                                           exposure = network$CAADB,
                                                           sw = sw_lag2,nsim = 999,
                                                           sig_threshold=thresholds[x])) %>% 
@@ -445,7 +455,7 @@ cr_lag2_bind <- do.call(rbind,cr_lag2) %>%
 
 cr_lag3 <-  lapply(1:length(thresholds), 
                    function(x) bind_cols(network,
-                                         localmoran_cr_mc(event = network$total_bm_incidents,
+                                         localmoran_cr_mc(event = network$all_incidents,
                                                           exposure = network$CAADB,
                                                           sw = sw_lag3,nsim = 999,
                                                           sig_threshold=thresholds[x])) %>% 
@@ -500,18 +510,17 @@ cr_lag3[[1]] %>%
 ## Significant Cluster's
 
 ```{r,warning=FALSE,message=FALSE}
-hotspots <- cr_bind %>% 
-  filter(cluster_type!="Insig.") 
 
-ggplot() +
-  geom_sf(data=st_union(study_area),fill="snow1") +
-  geom_sf(data = hotspots,aes(color=cluster_type,size=cluster_type),show.legend = "line") +
-  scale_color_manual(name = c("Moran's I\nCluster"),
-                     values = c("#D7191C","#2B83BA","#ABDDA4","#FDAE61","lightgrey"),
-                     drop=FALSE) +
-  scale_size_manual(name = c("Moran's I\nCluster"),
-                    values = c(1,1,1,1,0.05),
-                    drop=FALSE) +
+
+hotspots <- cr_bind %>% 
+  filter(pval<0.01) %>% 
+  filter(z>0) %>% 
+  filter(st_intersects(x=.,y=st_as_sfc(st_bbox(vic_city)),sparse=FALSE))   # subset bikemaps by captial region boundary
+
+         
+lisa_rates <- ggplot() +
+  geom_sf(data=vic_city,fill="snow1") +
+  geom_sf(data = hotspots,color="darkred") +
   theme_minimal() +
   theme(axis.text.x = element_blank(),
         axis.ticks.x = element_blank(),
@@ -521,8 +530,16 @@ ggplot() +
         panel.grid.major = element_blank() ,
         axis.title = element_blank(),
         legend.position = "left") +
-  facet_grid(Adjacency_lag~Significance)
+  facet_wrap(~Adjacency_lag,ncol=2)
 
+ggsave(lisa_rates,
+       width = 180,
+       height = 180,
+       units = "mm",
+       dpi=500,
+       device = "jpeg",
+       path = paste0(getwd(),"/figures"),
+       filename = "lisa_rates.jpeg" )
 
 mapview(cr_list,zcol = list("Significance","Significance","Significance","Significance"))
 
